syntax="proto3";
 
package proto;
 
option go_package="food-ordering/fulfillmentService";

message Delivery_Order {
   int64 id =1;
   string status =2;
}

message Deliver_Executive {
   string deliveryExecutiveId =1;
	string name =2;
   string location =3;
   repeated Delivery_Order deliveryOrders =4;
	string token =5;
}

message Order {
   int64 orderId =1;
   float total_price =2;
   string pick_up_location =3;
   string drop_location =4;
   int64 delivery_executive_id =5;
   string status =6;
}
 
message CreateDeliveryExecutiveReuqest {
   Deliver_Executive deliveryExecutive =1;
}

message CreateDeliveryExecutiveResponse {
   Deliver_Executive deliveryExecutive =1;
}

message AssignOrderRequest {
   Order order =1;
}
message AssignOrderResponse {
   Order order =1;
}
 
message UpdateStatusRequest {
   int64 orderId =1;
   string status =2;
}

message UpdateStatusResponse {
   int64 orderId =1;
   string status =2;
}

service FulfillmentService {
   rpc CreateDeliveryExecutive(CreateDeliveryExecutiveReuqest) returns (CreateDeliveryExecutiveResponse) {}
   rpc AssignOrder(AssignOrderRequest) returns (AssignOrderResponse) {}
   rpc UpdateStatus(UpdateStatusRequest) returns (UpdateStatusResponse) {}
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/fulfillment.proto